--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mui/material": "^5.0.2",
     "@mui/styles": "^5.0.1",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.0.8",
     "next": "11.1.2",
+    "next-connect": "^0.10.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
