--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.2",
     "@mui/styles": "^5.0.1",
+    "axios": "^0.22.0",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.0.8",
     "next": "11.1.2",
