--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.0.2",
     "@mui/styles": "^5.0.1",
     "axios": "^0.22.0",
+    "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.0.8",
     "next": "11.1.2",
